--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,14 @@
 name: adaptive_aura
 description: "A Flutter package for creating beautiful, dynamic aura effects that adapt to the color of images."
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/dc143cDev/flutter_adaptive_aura
 repository: https://github.com/dc143cDev/flutter_adaptive_aura
+topics:
+  - ui
+  - animation
+  - effects
+  - design
+  - gradient
 environment:
   sdk: ^3.5.1
   flutter: ">=1.17.0"
